--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <div class="container">
-        <button onclick="myFunction()">ok</button>
+        <button onclick="ok()">ok</button>
+        <button onclick="sans()">sans</button>
 
         <div id="myDIV">       
             <button id="open-image"></button>
